<resources>

    // Sign in and up pages
    <string name="app_name">CookEx</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="register_button">REGISTER</string>
    <string name="login_button">LOGIN</string>
    <string name="register_hyperlink">Dont have an account? \nSign up with email and password.</string>
    <string name="username">Username</string>

    // Navigation Drawer
    <string name="user_photo">user_photo</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    // User profile page
    <string name="name_surname">Name Surname</string>
    <string name="my_recipes">My Recipes</string>

    // Settings page
    <string name="log_out">Log Out</string>

    // Facebook strings
    <string name="facebook_app_id">2764047660488460</string>
    <string name="fb_login_protocol_scheme">fb2764047660488460</string>

    // If need be, additional categories can be added here

    // Just a simple placeholder
    <string name="placeholder">placeholder</string>

    //Create recipe page
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="stepDescription">Description</string>
    <string name="add_steps">Add Steps</string>
    <string name="scale">Scale</string>
    <string name="step_name">Step name</string>
    <string name="normal_value_menu">Normal</string>
    <string name="timer_value_menu">Timer</string>
    <string name="weight_value_menu">Weight</string>
    <string name="step_mode_prompt">Select a mode</string>
    <string-array name="mode_list">
        <item>Normal</item>
        <item>Timer</item>
        <item>Weight</item>
    </string-array>

    //Bluetooth
    <string name="bluetooth">Bluetooth</string>
    <string name="unknown_device">Unknown device</string>
    <string name="ble_not_supported">Bluetooth not supported</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="title_devices">Title</string>
    <string name="label_device_address">Device Address</string>
    <string name="label_state">State</string>
    <string name="label_data">Data</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>
    <string name="scan">Scan</string>
    <string name="time">Time</string>
    <string name="steps">steps</string>
    <string name="Save">save</string>

</resources>
